...
    }
    fun deleteAccount(account: Account) = viewModelScope.launch {
        val expenseCount = expenseRepository.getCountByAccount(account.name)
        val transferCount = transferHistoryRepository.getCountByAccount(account.name)

        if (expenseCount > 0 || transferCount > 0) {
            _errorChannel.send("Cannot delete account. It has associated expenses or transfers.")
        } else {
            // Check if this account is the default expense or transfer account
            if (_defaultExpenseAccountId.value == account.id) {
                userPreferences.setDefaultExpenseAccountId(null)
            }
            if (_defaultTransferAccountId.value == account.id) {
...
